Step2: QueryBuilder DDL - 함석호 (#185)
* refactor: 1단계 코드리뷰 반영

* readme: step2 요구사항 정리

* feat: Table, Column 클래스 작성

* feat: Dialect 관련 클래스 작성

* feat: EntityConvert 클래스 작성 및 테스트 통과

* feat: QueryBuilder 클래스 작성 및 테스트 통과

* test: Database 통합 테스트 작성

* test: Table 클래스 테스트 추가

* feat: 요구사항2에 맞게 Person 클래스 수정

* feat: @GeneratedValue, @Column 어노테이션 옵션에 따라 Column 클래스가 생성되도록 수정

* refactor: 타입을 매핑하는 클래스 추가

* test: Column 클래스에 대한 테스트 추가 및 요구사항2 완료

* refactor: 요구사항3에 맞춰 Person 클래스 수정

* feat: @Table, @Transient 어노테이션을 처리할 수 있도록 코드 변경

* test: @Table의 name 처리를 검증하는 테스트 작성

* test: @Transient 필드를 제외하고 Table을 생성하는 기능을 검증하는 테스트 작성

* feat: drop table 쿼리 작성 기능 구현

* test: drop query 관련 테스트 작성 및 통과

* readme: 요구사항4 완료

* refactor: classType 대신 Java의 Class 타입 사용하도록 변경 및 ColumType 클래스명 수정

* refactor: Dialect 인터페이스로 변경 및 상수 위치 이동

* refactor: 제약 조건 인터페이스로 변경

* refactor: 쿼리를 만드는 책임을 QueryBuilder로 이동